# fastapi-project-template

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.CUDA  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: sv_deploy.yaml
docker/: docker-compose_cuda.yaml
scripts/: generate_secret.py  test_cuda.py
src/: app.py
src/core/: config.py  log_config.py  logger_func.py
src/models/: auth.py  requests.py
src/routers/: auth.py  health.py  task_status.py  your_service_route.py
src/services/: celery.py  tasks.py  your_service.py
src/utils/: api_key.py  auth_utils.py  mongo_utils.py
tests/: test_api.py
