[project]
name = "fastapi-project-template"
version = "0.1.0"
description = "A FastAPI project template with Celery and Redis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]",
    "python-dotenv",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "celery",
    "flower",
    "redis",
    "gevent",
    "requests",
    "python-multipart",
    "pymongo",
    "python-jose[cryptography]",
    "passlib[bcrypt]"
]
